kubernetes/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poleit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poleit
  template:
    metadata:
      labels:
        app: poleit
    spec:
      containers:
      - name: poleit-container
        image: scarface05/poleit:1.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: poleit-pvc
            mountPath: /var/lib/mysql
      volumes:
          - name: poleit-pvc
            persistentVolumeClaim:
              claimName: poleit-pvc
