kubernetes/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poleit
spec:
  selector:
    app: poleit
  ports:
    - protocol: TCP
      port: 80
