kubernetes/website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poleit
spec:
  rules:
    - host: poleit.cloud
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: poleit
              port:
                number: 80
